@@ -2,19 +2,19 @@ package fi.digitraffic.tis.vaco.ui;
 
 import fi.digitraffic.tis.SpringBootIntegrationTestBase;
 import fi.digitraffic.tis.vaco.TestObjects;
-import fi.digitraffic.tis.vaco.db.model.ContextRecord;
-import fi.digitraffic.tis.vaco.db.repositories.EntryRepository;
-import fi.digitraffic.tis.vaco.findings.model.Finding;
-import fi.digitraffic.tis.vaco.db.repositories.FindingRepository;
-import fi.digitraffic.tis.vaco.findings.model.FindingSeverity;
-import fi.digitraffic.tis.vaco.db.repositories.TaskRepository;
-import fi.digitraffic.tis.vaco.process.model.ImmutableTask;
-import fi.digitraffic.tis.vaco.process.model.Task;
 import fi.digitraffic.tis.vaco.db.mapper.RecordMapper;
 import fi.digitraffic.tis.vaco.db.model.EntryRecord;
+import fi.digitraffic.tis.vaco.db.repositories.EntryRepository;
+import fi.digitraffic.tis.vaco.db.repositories.FindingRepository;
+import fi.digitraffic.tis.vaco.db.repositories.RulesetRepository;
+import fi.digitraffic.tis.vaco.db.repositories.TaskRepository;
+import fi.digitraffic.tis.vaco.findings.model.Finding;
+import fi.digitraffic.tis.vaco.findings.model.FindingSeverity;
+import fi.digitraffic.tis.vaco.process.model.ImmutableTask;
+import fi.digitraffic.tis.vaco.process.model.Task;
+import fi.digitraffic.tis.vaco.queuehandler.model.Entry;
 import fi.digitraffic.tis.vaco.queuehandler.model.ImmutableEntry;
 import fi.digitraffic.tis.vaco.rules.RuleName;
-import fi.digitraffic.tis.vaco.db.repositories.RulesetRepository;
 import fi.digitraffic.tis.vaco.ruleset.model.Ruleset;
 import fi.digitraffic.tis.vaco.summary.GtfsInputSummaryService;
 import fi.digitraffic.tis.vaco.summary.model.RendererType;
@@ -68,17 +68,20 @@ class EntryStateServiceIntegrationTests extends SpringBootIntegrationTestBase {
 
     private Task task;
 
-    private EntryRecord entry;
+    private EntryRecord entryRecord;
+    private Entry entry;
 
     private Ruleset rule;
 
     @BeforeEach
     void setUp() throws URISyntaxException {
         ImmutableEntry entryToCreate = TestObjects.anEntry("gtfs").build();
-        entry = entryRepository.create(Optional.empty(), entryToCreate).get();
-        taskRepository.createTasks(entry, List.of(ImmutableTask.of(RuleName.GTFS_CANONICAL, 1)));
-        task = taskRepository.findTask(entry.id(), RuleName.GTFS_CANONICAL).get();
+        entryRecord = entryRepository.create(Optional.empty(), entryToCreate).get();
+        taskRepository.createTasks(entryRecord, List.of(ImmutableTask.of(RuleName.GTFS_CANONICAL, 1)));
+        task = taskRepository.findTask(entryRecord.id(), RuleName.GTFS_CANONICAL).get();
         rule = recordMapper.toRuleset(rulesetRepository.findByName(RuleName.GTFS_CANONICAL).get());
+
+        entry = recordMapper.toEntryBuilder(entryRecord, Optional.empty()).build();
 
         inputPath = Path.of(ClassLoader.getSystemResource("summary/211_gtfs.zip").toURI());
 
@@ -130,13 +133,12 @@ class EntryStateServiceIntegrationTests extends SpringBootIntegrationTestBase {
     void testGetRuleReport() {
         Map<String, Ruleset> rulesetMap = new HashMap<>();
         rulesetMap.put(task.name(), rule);
-        Optional<ContextRecord> context = Optional.empty(); // TODO: add actual context
-        TaskReport ruleReport = entryStateService.getTaskReport(task, recordMapper.toEntryBuilder(entry, context).build(), rulesetMap);
+        TaskReport ruleReport = entryStateService.getTaskReport(task, entry, rulesetMap);
         assertThat(ruleReport.name(), equalTo(rule.identifyingName()));
         assertThat(ruleReport.description(), equalTo(rule.description()));
 
         // Order matters
-        ItemCounter allCounter = ruleReport.findingCounters().get(0);
+        ItemCounter allCounter = ruleReport.findingCounters().getFirst();
         Assertions.assertNotNull(allCounter);
         assertThat(allCounter.total(), equalTo(10L));
         ItemCounter criticalCounter = ruleReport.findingCounters().get(1);
@@ -153,7 +155,7 @@ class EntryStateServiceIntegrationTests extends SpringBootIntegrationTestBase {
         assertThat(infoCounter.total(), equalTo(2L));
 
         assertThat(ruleReport.findings().size(), equalTo(6));
-        AggregatedFinding code1 = ruleReport.findings().get(0);
+        AggregatedFinding code1 = ruleReport.findings().getFirst();
         assertThat(code1.severity(), equalTo(FindingSeverity.CRITICAL));
 
         AggregatedFinding code2 = ruleReport.findings().get(1);
@@ -164,7 +166,7 @@ class EntryStateServiceIntegrationTests extends SpringBootIntegrationTestBase {
         assertThat(code3.severity(), equalTo(FindingSeverity.ERROR));
         assertThat(code3.total(), equalTo(2));
         assertThat(code3.findings().size(), equalTo(2));
-        assertNotNull(code3.findings().get(0).raw());
+        assertNotNull(code3.findings().getFirst().raw());
 
         AggregatedFinding code4 = ruleReport.findings().get(3);
         assertThat(code4.severity(), equalTo(FindingSeverity.WARNING));
@@ -181,46 +183,32 @@ class EntryStateServiceIntegrationTests extends SpringBootIntegrationTestBase {
 
     @Test
     void testGettingSummaries() {
-        assertDoesNotThrow(() -> gtfsInputSummaryService.generateGtfsInputSummaries(inputPath, task.id()));
-        Optional<ContextRecord> context = Optional.empty(); // TODO: add actual context
-        List<Summary> summaries = entryStateService.getTaskSummaries(recordMapper.toEntryBuilder(entry, context).build());
+        assertDoesNotThrow(() -> gtfsInputSummaryService.generateGtfsInputSummaries(entry, task, inputPath));
+        List<Summary> summaries = entryStateService.getTaskSummaries(entry);
         assertThat(summaries.size(), equalTo(5));
-        // Order matters
-        Summary agencies = summaries.get(0);
-        assertThat(agencies.name(), equalTo("agencies"));
-        assertThat(agencies.rendererType(), equalTo(RendererType.CARD));
-        assertThat(((List<?>) agencies.content()).size(), equalTo(6));
-        Card agency = (Card) ((List<?>) agencies.content()).get(0);
-        assertThat(agency.title(), equalTo("Oulaisten Liikenne Oy"));
-        LabelValuePair website = (LabelValuePair) ((List<?>) agency.content()).get(0);
-        assertThat(website.label(), equalTo("website"));
-        assertThat(website.value(), equalTo("https://www.oulaistenliikenne.fi/"));
-        LabelValuePair email = (LabelValuePair) ((List<?>) agency.content()).get(1);
-        assertThat(email.label(), equalTo("email"));
-        assertThat(email.value(), equalTo("info@oulaistenliikenne.fi"));
+        // Order matters // TODO: LinkedHashMap
+        Summary agenciesSummary = summaries.getFirst();
+        assertThat(agenciesSummary.name(), equalTo("agencies"));
+        assertThat(agenciesSummary.rendererType(), equalTo(RendererType.CARD));
 
-        Summary feedInfo = summaries.get(1);
-        assertThat(feedInfo.name(), equalTo("feedInfo"));
-        assertThat(feedInfo.rendererType(), equalTo(RendererType.TABULAR));
-        assertThat(((List<?>) feedInfo.content()).size(), equalTo(5));
-        LabelValuePair publisher = (LabelValuePair) ((List<?>) feedInfo.content()).get(0);
-        assertThat(publisher.label(), equalTo("publisherName"));
-        assertThat(publisher.value(), equalTo("Kajaani"));
-        LabelValuePair publisherName = (LabelValuePair) ((List<?>) feedInfo.content()).get(0);
-        assertThat(publisherName.label(), equalTo("publisherName"));
-        assertThat(publisherName.value(), equalTo("Kajaani"));
-        LabelValuePair publisherUrl = (LabelValuePair) ((List<?>) feedInfo.content()).get(1);
-        assertThat(publisherUrl.label(), equalTo("publisherUrl"));
-        assertThat(publisherUrl.value(), equalTo("http://kajaani.fi"));
-        LabelValuePair feedLanguage = (LabelValuePair) ((List<?>) feedInfo.content()).get(2);
-        assertThat(feedLanguage.label(), equalTo("feedLanguage"));
-        assertThat(feedLanguage.value(), equalTo("fi"));
-        LabelValuePair feedStartDate = (LabelValuePair) ((List<?>) feedInfo.content()).get(3);
-        assertThat(feedStartDate.label(), equalTo("feedStartsDate"));
-        assertThat(feedStartDate.value(), equalTo("20180808"));
-        LabelValuePair feedEndDate = (LabelValuePair) ((List<?>) feedInfo.content()).get(4);
-        assertThat(feedEndDate.label(), equalTo("feedEndDate"));
-        assertThat(feedEndDate.value(), equalTo("20261231"));
+        List<Card> agencies = (List<Card>) agenciesSummary.content();
+        assertThat(agencies.size(), equalTo(6));
+
+        assertAgencyCard(agencies.get(0), "Oulaisten Liikenne Oy", "https://www.oulaistenliikenne.fi/", null, "info@oulaistenliikenne.fi");
+        assertAgencyCard(agencies.get(1), "Vekka Group Oy", "http://www.vekkaliikenne.fi", null, "");
+        assertAgencyCard(agencies.get(2), "KYMEN CHARTERLINE OY", "http://www.bussimatkatoimisto.fi/", null, "");
+        assertAgencyCard(agencies.get(3), "Liikenne M. Heikura Oy", "http://www.google.fi", null, "");
+        assertAgencyCard(agencies.get(4), "Kainuun Tilausliikenne P. Jääskeläinen Ky", "http://www.kainuuntilausliikenne.fi/", null, "");
+        assertAgencyCard(agencies.get(5), "Tilausliikenne Kuvaja Oy", "http://www.tilausliikennekuvaja.fi", null, "");
+
+        Summary feedInfosSummary = summaries.get(1);
+        assertThat(feedInfosSummary.name(), equalTo("feedInfo"));
+        assertThat(feedInfosSummary.rendererType(), equalTo(RendererType.TABULAR));
+
+        List<LabelValuePair> feedInfos = (List<LabelValuePair>) feedInfosSummary.content();
+        assertThat(feedInfos.size(), equalTo(5));
+
+        assertFeedInfoCard(feedInfos, "Kajaani", "http://kajaani.fi", "fi", "20180808", "20261231");
 
         Summary files = summaries.get(2);
         assertThat(files.name(), equalTo("files"));
@@ -236,5 +224,26 @@ class EntryStateServiceIntegrationTests extends SpringBootIntegrationTestBase {
         assertThat(components.name(), equalTo("components"));
         assertThat(components.rendererType(), equalTo(RendererType.LIST));
         assertThat(((List<?>) components.content()).size(), equalTo(10));
+    }
+
+    private static void assertAgencyCard(Card card, String title, String website, String phone, String email) {
+        assertThat(card.title(), equalTo(title));
+        List<LabelValuePair> content = (List<LabelValuePair>) card.content();
+        assertLabelValuePair(content.get(0), "website", website);
+        assertLabelValuePair(content.get(1), "email", email);
+        assertLabelValuePair(content.get(2), "phone", phone);
+    }
+
+    private static void assertFeedInfoCard(List<LabelValuePair> feedInfos, String publisherName, String publisherUrl, String language, String startDate, String endDate) {
+        assertLabelValuePair(feedInfos.get(0), "publisherName", publisherName);
+        assertLabelValuePair(feedInfos.get(1), "publisherUrl", publisherUrl);
+        assertLabelValuePair(feedInfos.get(2), "feedLanguage", language);
+        assertLabelValuePair(feedInfos.get(3), "feedStartsDate", startDate);
+        assertLabelValuePair(feedInfos.get(4), "feedEndDate", endDate);
+    }
+
+    private static void assertLabelValuePair(LabelValuePair pair, String expectedLabel, String expectedValue) {
+        assertThat("Unexpected label for " + pair, pair.label(), equalTo(expectedLabel));
+        assertThat("Unexpected value for " + pair, pair.value(), equalTo(expectedValue));
     }
 }
